RESOLVED FIXED23177
CSS Transitions with zero-duration and non-zero delay do not work
https://bugs.webkit.org/show_bug.cgi?id=23177
Summary CSS Transitions with zero-duration and non-zero delay do not work
Pierre-Olivier Latour
Reported 2009-01-07 16:41:56 PST
CSS Transitions with zero-duration and non-zero delay do not work: their either don't start at all, or start but never end and the AnimationController keeps idling.
Attachments
Patch v1 (12.02 KB, patch)
2009-01-07 16:56 PST, Pierre-Olivier Latour
mitz: review+
Pierre-Olivier Latour
Comment 1 2009-01-07 16:56:56 PST
Created attachment 26513 [details] Patch v1
mitz
Comment 2 2009-01-08 10:04:18 PST
Comment on attachment 26513 [details] Patch v1 r=me The fact that numberOfActiveAnimations() actually needs to check for running() instead of active() suggests that there is some naming inconsistency with a great potential for confusion. It would be good to address this soon.
Pierre-Olivier Latour
Comment 3 2009-01-08 10:11:49 PST
> The fact that numberOfActiveAnimations() actually needs to check for running() > instead of active() suggests that there is some naming inconsistency with a > great potential for confusion. It would be good to address this soon. See https://bugs.webkit.org/show_bug.cgi?id=23188
Pierre-Olivier Latour
Comment 4 2009-01-08 10:25:00 PST
Sending LayoutTests/ChangeLog Sending LayoutTests/animations/animation-controller-drt-api-expected.txt Sending LayoutTests/animations/animation-controller-drt-api.html Sending LayoutTests/platform/win/Skipped Adding LayoutTests/transitions/zero-duration-with-non-zero-delay-end-expected.txt Adding LayoutTests/transitions/zero-duration-with-non-zero-delay-end.html Adding LayoutTests/transitions/zero-duration-with-non-zero-delay-start-expected.txt Adding LayoutTests/transitions/zero-duration-with-non-zero-delay-start.html Sending WebCore/ChangeLog Sending WebCore/page/animation/AnimationBase.cpp Sending WebCore/page/animation/AnimationController.cpp Sending WebCore/page/animation/CompositeAnimation.cpp Transmitting file data ............ Committed revision 39711.
Chris Marrin
Comment 5 2009-01-08 15:17:49 PST
*** Bug 20100 has been marked as a duplicate of this bug. ***
Note You need to log in before you can comment on or make changes to this bug.