2009-01-08  Pierre-Olivier Latour  <pol@apple.com>

Reviewed by Dan Bernstein.

        Fixed CSS Transitions with zero-duration but non-zero-delay not starting or ending properly.

        Also updated AnimationController::numberOfActiveAnimations() which now returns the number of "active" animations,
        instead of simply the "running" ones.

        https://bugs.webkit.org/show_bug.cgi?id=23177

        Tests: transitions/zero-duration-with-non-zero-delay-end.html
               transitions/zero-duration-with-non-zero-delay-start.html

        * page/animation/AnimationBase.cpp:
        (WebCore::AnimationBase::fireAnimationEventsIfNeeded):
        * page/animation/AnimationController.cpp:
        (WebCore::AnimationControllerPrivate::animationTimerFired):
        * page/animation/CompositeAnimation.cpp:
        (WebCore::CompositeAnimationPrivate::numberOfActiveAnimations):

        Added layout tests for CSS Transitions with zero-duration but non-zero-delay.

        Also updated the layout test for DRT API numberOfActiveAnimations() which now returns the number of "active" animations,
        instead of simply the running ones.

        https://bugs.webkit.org/show_bug.cgi?id=23177

        * animations/animation-controller-drt-api-expected.txt:
        * animations/animation-controller-drt-api.html:
        * platform/win/Skipped:
        * transitions/zero-duration-with-non-zero-delay-end-expected.txt: Added.
        * transitions/zero-duration-with-non-zero-delay-end.html: Added.
        * transitions/zero-duration-with-non-zero-delay-start-expected.txt: Added.
        * transitions/zero-duration-with-non-zero-delay-start.html: Added.



Canonical link: https://commits.webkit.org/31910@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@39711 268f45cc-cd09-0410-ab3c-d52691b4dbfc